# xmas_puns

./: .gitignore  LICENSE  pyproject.toml
config/: api.ini  api.ini.sample
xmas_puns/: get_lyrics.py  requirements.txt  test.py
xmas_puns/data/: top100.csv
