[tool.poetry]
name = "xmas-puns"
version = "0.1.0"
description = ""
authors = ["fedenanni <nanni.federico@gmail.com>"]
readme = "README.md"
packages = [{include = "xmas_puns"}]

[tool.poetry.dependencies]
python = "^3.7"
transformers = "^4.24.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
torch = { url = "https://download.pytorch.org/whl/cpu/torch-1.13.0-cp39-none-macosx_11_0_arm64.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
